--- a/.babelrc
+++ b/.babelrc
@@ -8,7 +8,7 @@
     }],
     "stage-2"
   ],
-  "plugins": ["transform-vue-jsx", "transform-runtime",["component",{
+  "plugins": [ "transform-runtime",["component",{
     "libraryName":"mint-ui",
     "style":true
   }]]
