--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "exif-js": "^2.3.0",
     "font-awesome": "^4.7.0",
     "js-cookie": "^2.2.1",
     "js-md5": "^0.7.3",
     "mint-ui": "^2.2.13",
     "vue": "^2.5.2",
+    "vue-html5-editor": "^1.1.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.2"
   },
